# NSU

./: My_sendVel.py  button.c  driver.c  main.c  multim.c  multim.h  test_vel.py
AI_course/: README.md
AI_course/Report/: Report text.docx
Arduino/: Digit_matrix.ino  Display_voltmeter.ino  LCD_timer.ino  LC_display.ino  Timer_with_interruption.ino  Voltmeter.ino
Arduino/Low_battery/: Arduino_code.ino  Python_code.ipynb
Arduino_UNO/: Digit_matrix.ino  Digit_matrix_dif_base.ino  Flashing.ino  Smooth_flashing.ino  Voltmeter.ino
C_course/Project/: Board.c  Board.h
Cryptography/: Task_04.nb  Task_06.nb  Task_08.nb  Task_09.nb  Task_1.nb  Task_10.nb  Task_11.nb  Task_2.nb  Task_3.nb  Task_5.nb  Task_7.nb
Data_processing/: Task_1.py  Task_2.py  Task_3.py  task_2.py
Databases_SQL/: Task 1.sql  Task 2.sql  Task 3.sql  Task 5-1.sql  Task 5-2.sql  Task 5-3. Recursion.sql  Task 5-3.sql  Task 5-4.sql  Task 5-5.sql  Task_1.sql  Task_2.sql  Task_3.sql  Task_4.sql  Task_5-1.sql  Task_5-2.sql  Task_5-3.sql  Task_5-3_recursion.sql  Task_5-4.sql  Task_5-5.sql  deadlock.java
Fundamentals_of_Software_Design/: README.md
Jupyter_Notebook/: Hello.ipynb
Mobile_development/Aurora/scripts/: CMakeLists.txt  Checkers.qml  GameLogic.cpp  GameLogic.h  main.cpp
Robotics/: My_velocity.py  test_camera.py
Shell/: Task 2.sh  Task 3.sh  Task 4.sh  Task 5.sh  Task_1.sh  Task_2.sh  Task_3.sh  Task_4.sh  Task_5.sh  Task_6.sh  Задания.txt
Software_development/: README.md
TSANI/: Lab_1-1.c  Lab_1-2.c  Lab_2-1.c  Lab_2-2.c  Lab_2-3-1.c  Lab_2-3-2.c  Lab_3-1-1.c  Lab_3-1-2.c  Lab_3-2.c
(+1131 files in other folders)
